@@ -15,12 +15,12 @@
  */
 package com.android.tools.idea.apk.viewer;
 
+import static com.android.SdkConstants.EXT_DEX;
+import static com.android.SdkConstants.UTF_8;
 import static com.android.tools.idea.FileEditorUtil.DISABLE_GENERATED_FILE_NOTIFICATION_KEY;
 import static com.android.tools.idea.apk.viewer.pagealign.AlignmentFindingKt.IS_PAGE_ALIGN_ENABLED;
-import static com.android.tools.idea.apk.viewer.pagealign.AlignmentFindingKt.getAlignmentFinding;
 import static com.android.tools.instrumentation.threading.agent.callback.ThreadingCheckerUtil.withChecksDisabledForSupplier;
 
-import com.android.SdkConstants;
 import com.android.tools.apk.analyzer.ApkSizeCalculator;
 import com.android.tools.apk.analyzer.Archive;
 import com.android.tools.apk.analyzer.ArchiveContext;
@@ -46,7 +46,6 @@ import com.intellij.openapi.fileEditor.FileEditorProvider;
 import com.intellij.openapi.fileEditor.FileEditorState;
 import com.intellij.openapi.fileEditor.ex.FileEditorProviderManager;
 import com.intellij.openapi.progress.ProgressIndicator;
-import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.progress.Task;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.DialogBuilder;
@@ -67,8 +66,11 @@ import com.intellij.util.messages.MessageBusConnection;
 import java.beans.PropertyChangeListener;
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.List;
 import java.util.Optional;
 import javax.swing.JComponent;
@@ -82,6 +84,8 @@ import org.jetbrains.annotations.VisibleForTesting;
 public class ApkEditor extends UserDataHolderBase implements FileEditor, ApkViewPanel.Listener {
   private final Project myProject;
   private final VirtualFile myBaseFile;
+  @NotNull
+  private String myBaseFileHash = "";
   private final VirtualFile myRoot;
   private final AndroidApplicationInfoProvider myApplicationInfoProvider;
   private ApkViewPanel myApkViewPanel;
@@ -130,12 +134,12 @@ public class ApkEditor extends UserDataHolderBase implements FileEditor, ApkView
       @Override
       public void after(@NotNull List<? extends VFileEvent> events) {
         String basePath = myBaseFile.getPath();
-        String contents = safeReadContents(myBaseFile.toNioPath());
         for (VFileEvent event : events) {
           if (FileUtil.pathsEqual(basePath, event.getPath())) {
             if (myBaseFile.isValid()) { // If the file is deleted, the editor is automatically closed.
-              if (!contents.equals(safeReadContents(Path.of(event.getPath())))) {
-                refreshApk(baseFile);
+              String hash = generateHash(myBaseFile.toNioPath());
+              if (hash == null || !hash.equals(myBaseFileHash)) {
+                refreshApk(myBaseFile);
               }
             }
           }
@@ -147,12 +151,21 @@ public class ApkEditor extends UserDataHolderBase implements FileEditor, ApkView
     mySplitter.setSecondComponent(new EmptyPanel().getComponent());
   }
 
-  private static String safeReadContents(Path path) {
+  @Nullable
+  private static String generateHash(Path path) {
     try {
-      return Files.readString(path);
+      MessageDigest digest = MessageDigest.getInstance("SHA-256");
+      byte[] bytes = Files.readAllBytes(path);
+      byte[] hashBytes = digest.digest(bytes);
+      StringBuilder hashString = new StringBuilder();
+      for (byte b : hashBytes) {
+        // Append each byte as a two-character hexadecimal string.
+        hashString.append(String.format("%02x", b));
+      }
+      return hashString.toString();
     }
-    catch (IOException e) {
-      return "";
+    catch (NoSuchAlgorithmException | IOException e) {
+      return null;
     }
   }
 
@@ -162,7 +175,7 @@ public class ApkEditor extends UserDataHolderBase implements FileEditor, ApkView
   }
 
   private void refreshApk(@NotNull VirtualFile apkVirtualFile) {
-    ProgressManager.getInstance().run(new Task.Backgroundable(myProject, "Reading APK contents") {
+    Task.Backgroundable task = new Task.Backgroundable(myProject, "Reading APK contents") {
       @Override
       public void run(@NotNull ProgressIndicator indicator) {
         disposeArchive();
@@ -182,6 +195,10 @@ public class ApkEditor extends UserDataHolderBase implements FileEditor, ApkView
             mySplitter.setFirstComponent(myApkViewPanel.getContainer());
             selectionChanged(null);
           });
+          String hash = generateHash(apkVirtualFile.toNioPath());
+          if (hash != null) {
+            myBaseFileHash = hash;
+          }
         }
         catch (IOException e) {
           getLog().error(e);
@@ -189,7 +206,8 @@ public class ApkEditor extends UserDataHolderBase implements FileEditor, ApkView
           mySplitter.setFirstComponent(new JBLabel(e.toString()));
         }
       }
-    });
+    };
+    task.queue();
   }
 
   /**
@@ -314,7 +332,9 @@ public class ApkEditor extends UserDataHolderBase implements FileEditor, ApkView
       // If there are multiple, then give precedence to other viewers.
       if (nodes.length == 1 && nodes[0] != null) {
         ArchiveEntry archiveEntry = nodes[0].getData();
-        AlignmentFinding alignment = AlignmentFindingKt.getAlignmentFinding(archiveEntry);
+        AlignmentFinding alignment = AlignmentFindingKt.getAlignmentFinding(
+          archiveEntry,
+          myApkViewPanel.getTreeModel().getExtractNativeLibs());
         if (alignment.getHasWarning()) {
           return new AlignmentWarningViewer();
         }
@@ -328,8 +348,9 @@ public class ApkEditor extends UserDataHolderBase implements FileEditor, ApkView
         allDex = false;
         break;
       }
-      Path fileName = path.getData().getPath().getFileName();
-      if (fileName == null || !fileName.toString().endsWith(SdkConstants.EXT_DEX)){
+      Path dataPath = path.getData().getPath();
+      Path fileName = dataPath.getFileName();
+      if (fileName == null || Files.isDirectory(dataPath) || !fileName.toString().endsWith("." + EXT_DEX)){
         allDex = false;
         break;
       }
@@ -407,6 +428,11 @@ public class ApkEditor extends UserDataHolderBase implements FileEditor, ApkView
     if (archive.isBinaryXml(p, content)) {
       content = BinaryXmlParser.decodeXml(content);
       return ApkVirtualFile.create(p, content);
+    }
+
+    if (name.toString().endsWith(".json")) {
+      String text = JsonPrettyPrinter.prettyPrint(new String(content, StandardCharsets.UTF_8));
+      return ApkVirtualFile.createText(p, text);
     }
 
     if (archive.isProtoXml(p, content)) {
